--- a/en/apps.html
+++ b/en/apps.html
@@ -36,6 +36,13 @@
 <div class="row">
 
 <div class="col-md-4">
+<p><a href="metalogic.html"><img src="../images/metalogic/logo.png" class="macapp" /></a></p>
+<h2>MetaLogic</h2>
+<p>The productive util used to organise programming assets.<br><br><a href="metalogic.html"><b>MetaLogic</b></a> is a small util developed to effectively manage programming assets, include shell snippets, code blocks, sample code files, libraries, packages, Web links and other resources.</p>
+</div> <!-- col-md-4-->
+
+
+<div class="col-md-4">
 <p><a href="vtool.html"><img src="../images/vtool/logo.png" class="macapp" /></a></p>
 <h2>vTool</h2>
 <p><a href="vtool.html">vTool</a> is a small GUI frontend of FFmpeg for macOS. A small video manipulating util developed to help people deal with all kinds of video files in daily life easy and simple. With help of it, extract audio from video, scale video, crop video, merge multiple video files together, and convert video file format, can be accomplished by several clicks. </p>
@@ -48,17 +55,17 @@
 </div> <!-- col-md-4-->
 
 
+</div><!-- row -->
+
+
+<div class="row">
+
 <div class="col-md-4">
 <p><a href="speare.html"><img src="../images/speare/logo.png" class="macapp" /></a></p>
 <h2>Speare Code Editor</h2>
 <p>The free small IDE for scripting languages.<br><br> <a href="speare.html"><b>Speare</b></a> is an ultra lightweight code editor and a small IDE that provides builtin debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</p>
 </div> <!-- col-md-4-->
 
-
-</div><!-- row -->
-
-
-<div class="row">
 
 <div class="col-md-4">
 <p><a href="mathHelfer.html"><img src="../images/MathHelfer/logo.png" class="macapp" /></a></p>
@@ -74,17 +81,17 @@
 </div> <!-- col-md-4-->
 
 
-<div class="col-md-4">
-<p><a href="guard.html"><img src="../images/guard/guard7_logo.png" class="macapp" /></a></p>
-<h2>Guard7</h2>
-<p><a href="guard.html"><b>Guard7</b></a> is a cryptography tool used to protect your confidential information very simple and easy. It is an encryption and decryption system based on industry standard and was developed as the graphical frontend for the GNU Privacy Guard (GnuPG or GPG) on macOS with additional features.</p>
-</div> <!-- col-md-4-->
-
 
 </div><!-- row -->
 
 
 <div class="row">
+
+<div class="col-md-4">
+<p><a href="guard.html"><img src="../images/guard/guard7_logo.png" class="macapp" /></a></p>
+<h2>Guard7</h2>
+<p><a href="guard.html"><b>Guard7</b></a> is a cryptography tool used to protect your confidential information very simple and easy. It is an encryption and decryption system based on industry standard and was developed as the graphical frontend for the GNU Privacy Guard (GnuPG or GPG) on macOS with additional features.</p>
+</div> <!-- col-md-4-->
 
 <div class="col-md-4">
 <p><a href="beak.html"><img src="../images/beak/beak_logo.png" class="macapp" /></a></p>
@@ -100,24 +107,19 @@
 </div> <!-- col-md-4-->
 
 
+</div><!-- row -->
+
+<div class="row">
+
 <div class="col-md-4">
 <p><a href="uftp.html"><img src="../images/uftp/logo.png" class="macapp" /></a></p>
 <h2>uFTP Server</h2>
 <p><a href="uftp.html"><b>uFTP Server</b></a> is a very simple personal FTP Server designed for macOS without any user authentication, without complex and boring configuration, but still has very high performance.</p>
 </div> <!-- col-md-4-->
 
-
-</div><!-- row -->
-
-<div class="row">
-
 <div class="col-md-4">
 <p><a href="taihaa.html"><img src="../images/Taihaa/logo.png" class="macapp" /></a></p>
 <p><a href="taihaa.html"><b>Taihaa</b></a> is a fate telling app. It's a high precision fate analysis engine and high accuracy fate telling app designed for embedded systems that can be developed as standalone machine or handheld device. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report.</p>
-</div> <!-- col-md-4-->
-
-<div class="col-md-4">
-<p></p>
 </div> <!-- col-md-4-->
 
 <div class="col-md-4">
