--- a/en/index.html
+++ b/en/index.html
@@ -38,7 +38,7 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare Code Editor v1.2.105
+Speare Code Editor v1.2.207
 The free small IDE for scripting languages.
 (c) 2020 http://www.sevenuc.com
 </pre></div>
@@ -49,6 +49,14 @@ The free small IDE for scripting languages.
 </p>
 
 </div> <!-- jumbotron -->
+
+
+<h2>MetaLogic</h2>
+<p>
+<a href="http://www.sevenuc.com/en/metalogic.html" target="_blank"><img src="http://www.sevenuc.com/images/metalogic/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;height:160px; width:auto;">
+<a href="http://www.sevenuc.com/en/metalogic.html">MetaLogic</a> is a small util developed to effectively manage programming assets, include shell snippets, code blocks, sample code files, libraries, packages, Web links and other resources. It's also a powerful util used to classify and organise programming resource by topics, categories, functions, programming languages, key words etc. MetaLogic help people organise large amount of programming resources in a very flexible way, and has complete freedom to define all kinds of metadata fields for management of classification and organisation.</p>
+
+<p><br><br><br><br><br></p>
 
 <h2>Sounler</h2>
 <p>
