--- a/en/sounler.html
+++ b/en/sounler.html
@@ -32,6 +32,11 @@
     </div>
 
 
+<p><a href="https://apps.apple.com/us/app/sounler/id1534406144?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p>
+<br><br><br><br>
+<p>If you can't open the link above, please launch App Store and found Sounler by searching.</p>
+
+
 <h2>Features</h2>
 <p><ul>
 <li>Music player for video game platforms including Nintendo, Sony PlayStation, Amiga, Sega and Spectrum, etc.</li>
