--- a/en/sounler.html
+++ b/en/sounler.html
@@ -26,7 +26,7 @@
 <div class="container-fluid">
     <div class="jumbotron">
         <p><img src="../images/sounler/logo.png" style="width: 120px;" /></p>
-        <h1>Sounler<br><em>Version 1.3</em></h1>
+        <h1>Sounler<br><em>Version 1.5</em></h1>
         <p class="greenbig"><em>The small audio player for chiptune.</em></p>
         <p class="lead">The designedly small util for audio file classification and organisation. A small chiptune player for all classic home computers. <b>Sounler</b> is a small audio player originally developed to play various of audio format from popular arcade games and video games in later 80s and early 90s, i.e. the golden legend era. Sounler especially developed for chiptune, a.k.a video game music, so it supports almost all kinds of audio file format exists in NES(Famicom), SNES, GBA, N64, PSX, PS2, PSP, SMD, XBOX, GAMECUBE, WII, NDS, 3DS and DOS etc. It's also a powerful util used to classify and organise audio file by Game, Movie, Category, Platform, Genre, Album, Artist, and other metadata of audio file. Sounler can not only playback almost all kinds of popular golden era audio formats such as SPC, NSF, PSF, VGM, XM, MSX etc, but also supports mordern common mostly used audio file formats on Unix, Linux, macOS and Windows, e.g, MP3, Ogg, AAC/M4A, WMA, FLAC, etc. Sounler help you organise large amount of audio resources by Game, Movie or Vendor in a very flexible way, and has completely control to define any type of metadata fields for <b>management of classification and audio file organisation</b>. Sounler also can be simply used to convert audio file format or reset metadata of audio files.</p>
     </div>
@@ -50,6 +50,13 @@
 <li>Export report with the queried results from database.</li>
 <li>Ultra lightweight.</li>
 </ul></p>
+
+
+<h2>Audio Meta Data Management</h2>
+<p>
+<a href="../images/sounler/4.png" target="_blank"><img src="../images/sounler/4.png" class="screenshots"/></a><br>
+<b>Note:</b> You can use "Game" as "Movie" to manage large amount of movie musics, and change "Game Types" to "Movie Types".
+</p>
 
 
 <h2>Supported Platforms</h2>
