--- a/en/speare.html
+++ b/en/speare.html
@@ -26,7 +26,7 @@
 
     <div class="jumbotron">
         <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
-        <h1>Speare<br><em>Version 1.2.207 </em></h1>
+        <h1>Speare<br><em>Version 1.2.212 </em></h1>
         <p class="greenbig">The free small IDE for scripting languages.</p>
         <p class="lead">
 <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="debugger.html" target="_blank">built-in debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.</p>
@@ -39,6 +39,31 @@
 <p>If you can't open the link above, please launch App Store and found Speare by searching. <span class="green">Please kindly donate the author</span> by purchasing <a href="debugger.html" target="_blank">the pro version</a> or other app developed by the author, your donation will drive the author to continually improve it, or please kindly recommend this app on your blog or rate this app so that helping other people can more easily find it.</p>
 
 
+<h2>Features</h2>
+<p><ul>
+<li>Full featured code editor, powerful symbol parser for 90+ common programming languages.</li>
+<li>Well designed workspace management. Intuitive and simple.</li> 
+<li>Powerful code navigation and call routines tracing ability.</li>
+<li>Fast find edit point by symbol index, bookmark or searching.</li>
+<li>High performance when managing large amount of files and big files.</li>
+<li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
+<li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
+<li>High performance symbol parser engine for auto-completion and jump-to-definition.</li>
+<li>High performance real-time viewer for colourful file changes.</li>
+<li>Powerful built-in code formatter (code beautifier).</li>
+<li>Fast project switching and powerful insisted bookmark management.</li>
+<li>Keeping entire state after quit, the opened files, selection of each file and the cursor location.</li>
+<li>High extensible, built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</li>
+<li>Syntax checking, run code and unit test instantly, unlimited extension by shell scripts.</li>
+<li>Full featured Markdown and HTML5 editor and previewer, run Javascript code instantly, well-support Web development.</li>
+<li>Unlimited go back and forward, automatically remember jump location and current editing locations.</li>
+<li>Preview all kinds files, image, pdf, office documents, audio and video etc.</li>
+<li>Fonts and colours customisation for the text editor.</li>
+<li>Ultra lightweight.</li>
+</ul></p>
+
+
+<h2>Screenshot</h2>
 <p><a href="../images/speare/LLVM_in_Speare.png" target="_blank"><img src="../images/speare/LLVM_in_Speare.png" class="screenshots"/></a><br>
 Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare code editor.
 </p>
@@ -106,56 +131,6 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 
 
 <p class="green">Crafting software as small as possible.  →  <a href="debugger.html#whyc" target="_blank">Why C is the returned king of programming languages.</a></p>
-
-
-<h2>Screenshots</h2>
-<div class="screenshots">
-<div class="row">
-   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="../images/speare/0.png" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="../images/speare/1.png" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="../images/speare/2.png" alt="Third slide">
-    </div>  
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-  </div>
-</div>
-</div>
-
-<p><br><br></p>
-
-
-<h2>Features</h2>
-<p><ul>
-<li>Full featured code editor, syntax highlighting, auto-completion, jump to definition, instant symbol indexing.</li>
-<li>Built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and TCL.</li>
-<li>Powerful workspace management. Intuitive and simple.</li>
-<li>Run syntax checking and run code instantly.</li>
-<li>Full featured Markdown editor, run Javascript code instantly.</li>
-<li>Powerful code navigation and call routines tracing ability.</li>
-<li>High performance when manage big file and very large project.</li>
-<li>Preview all kinds files, image, pdf, office documents, audio and video etc.</li>
-<li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
-<li>Really ultra lightweight.</li>
-</ul></p>
 
 
 <h2>Code browser, call routines tracing and code analysis</h2>
