--- a/en/speare.html
+++ b/en/speare.html
@@ -48,7 +48,7 @@
 <li>High performance when managing large amount of files and big files.</li>
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
 <li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
-<li>High performance symbol parser engine for auto-completion and jump-to-definition.</li>
+<li>High performance symbol parsing engine for auto-completion and jump-to-definition.</li>
 <li>High performance real-time viewer for colourful file changes.</li>
 <li>Powerful built-in code formatter (code beautifier).</li>
 <li>Fast project switching and powerful insisted bookmark management.</li>
