--- a/en/speare.html
+++ b/en/speare.html
@@ -44,7 +44,7 @@
 <li>Full featured code editor, powerful symbol parser for 90+ common programming languages.</li>
 <li>Well designed workspace management. Intuitive and simple.</li> 
 <li>Powerful code navigation and call routines tracing ability.</li>
-<li>Fast find edit point by symbol index, bookmark or searching.</li>
+<li>Fast find edit points by symbol index, bookmark or searching.</li>
 <li>High performance when managing large amount of files and big files.</li>
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
 <li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
