--- a/en/speare.html
+++ b/en/speare.html
@@ -26,10 +26,10 @@
 
     <div class="jumbotron">
         <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
-        <h1>Speare<br><em>Version 1.2.212 </em></h1>
+        <h1>Speare<br><em>Version 1.2.215</em></h1>
         <p class="greenbig">The free small IDE for scripting languages.</p>
         <p class="lead">
-<a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="debugger.html" target="_blank">built-in debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.</p>
+<a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="debugger.html" target="_blank">built-in debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for a new programming language.</p>
     </div>
     
 
