--- a/en/debugger.html
+++ b/en/debugger.html
@@ -25,7 +25,7 @@
 <div class="container-fluid">
 
     <div class="jumbotron">
-        <p><pre class="green">
+        <p><pre>
    ____
   / __/ __  ___ ___  ___ ___
   _\ \/ _ \/ -_) _ `/ __/ -_)
