--- a/en/guard.html
+++ b/en/guard.html
@@ -25,7 +25,7 @@
 .fileicon { height:44px; width: auto; }
 .evil {color:#ff0000; }
 .dark {color:#333; }
-.warning { color:red; }
+.warning { color: #ffc8c8; }
 .greenbig {color: #007f00;font-size:1.2em;font-weight: bold;}
 .tell { color:#000000; font-weight: bold; }
 .note { color:#f0f0f0; background:#007f00; border-radius: 4px; padding:2px 2px 2px 2px; }
