--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -29,9 +29,10 @@
         <p><img src="../images/littlefox/logo.png" style="width: 120px;" /></p>
         <h1>LittleFox</h1>
         <p class="greenbig">Subtitle audio and video as simple as possible.</p>
-        <p class="lead"><b>LittleFox</b> is a small tool designed to help people synthesis subtitle with music and video in an efficient way. It was designed to conveniently synthesis subtitle with audio and video without traditional boring works. It helps end user share music or video on social websites or make slideshows with speech audio and pictures in a simple and efficient way. With the help of it, you can burn your favourite mp3 to video with lyrics sheet in several minutes, make slideshows by merging pictures with speech audio, synchronise some words to an exists video, and easily share them with a very small file size.</p>
+        <p class="lead"><b>LittleFox</b> is a small tool designed to help people synthesis subtitle with music and video in an efficient way. It was designed to conveniently synthesis subtitle with audio and video without traditional boring works. It helps end user share music or video on social websites or make slideshows with speech audio and pictures in a simple and efficient way. With the help of it, you can burn your favourite mp3 to video with lyrics sheet in several minutes, make slideshows by merging pictures with speech audio, synchronise some words to an exists video, and easily share them with a very small file size.<br><br>
+        <span class="hilight">LittleFox is also a karaoke video making tool. </span>
+        </p>
     </div>
-
 
 
 <h2>Share music and video on social websites</h2>
@@ -139,8 +140,6 @@ c. Run FFmpeg command directly on Terminal.app: <lt>ffmpeg -i /full/path/of/xxx.
 <source src="/videos/Arrietty.mp4" type="video/mp4">
 </video><br>
 <p>"Arrietty's Song" come from the respected film <a href="https://www.imdb.com/title/tt1568921/" target="_blank">借りぐらしのアリエッティ (The Secret World of Arrietty) </a>, 2010.</p>
-
-
 
 
 <video class="videobox" id="mainVideo" width="320" height="198" controls>
