--- a/en/debugger.html
+++ b/en/debugger.html
@@ -31,16 +31,16 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare Pro v1.2.217
+Speare Pro v1.2.300
 The free small IDE for scripting languages.
 (c) 2020 http://www.sevenuc.com
 </pre></p>
         <h1></h1>
         <p class="lead">
-        <a href="speare.html" target="_blank">Speare </a> is a small, free and friendly code editor, and an ultra light IDE. You can use it to edit source code files, programming and debugging. It was designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements. Speare code editor includes built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for a new programming language.
+        <a href="speare.html" target="_blank">Speare </a> is a small, free and friendly code editor, and an ultra lightweight IDE. You can use it to edit source code files, programming and debugging. It was designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements. Speare code editor includes built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise a debugging environment for a new programming language.
         </p>
     </div>
-    
+
 
 <p><a href="https://apps.apple.com/us/app/speare-pro/id1477773605?mt=12" target="_blank" class="appstore_download_link">
 <img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
