update speare version

--- a/en/speare.html
+++ b/en/speare.html
@@ -57,6 +57,7 @@
 <li>Syntax checking, run code and unit test instantly, unlimited extension by shell scripts.</li>
 <li>Full featured Markdown and HTML5 editor and previewer, run Javascript code instantly, well-support Web development.</li>
 <li>Unlimited go back and forward, automatically remember jump location and current editing locations.</li>
+<li>Unlimited shell script extension.</li>
 <li>Preview all kinds files, image, pdf, office documents, audio and video etc.</li>
 <li>Fonts and colours customisation for the text editor.</li>
 <li>Ultra lightweight.</li>
