--- a/en/index.html
+++ b/en/index.html
@@ -38,14 +38,14 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare Code Editor v1.2.207
+Speare Code Editor v1.2.300
 The free small IDE for scripting languages.
 (c) 2020 http://www.sevenuc.com
 </pre></div>
    
  
 <h1>Speare code editor</h1>
-<p><a href="http://www.sevenuc.com/en/speare.html" target="_blank"><img src="http://www.sevenuc.com/images/speare/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;"> <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="http://www.sevenuc.com/en/debugger.html" target="_blank">built-in debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.
+<p><a href="http://www.sevenuc.com/en/speare.html" target="_blank"><img src="http://www.sevenuc.com/images/speare/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;"> <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra lightweight IDE. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements. Speare code editor has <a href="http://www.sevenuc.com/en/debugger.html" target="_blank">built-in debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and people complete freedom to control and customise a debugging environment for a new programming language.
 </p>
 
 </div> <!-- jumbotron -->
