--- a/en/apps.html
+++ b/en/apps.html
@@ -77,7 +77,8 @@
 <div class="col-md-4">
 <p><a href="littlefox.html"><img src="../images/littlefox/logo.png" class="macapp" /></a></p>
 <h2>LittleFox</h2>
-<p><a href="littlefox.html"><b>LittleFox</b></a> is a small tool designed to help user share audio or video on social websites or make slideshows with speech audio and picture in a simple and efficient way. It was developed to conveniently synthesis subtitle with video or audio without traditional boring works.</p>
+<p>The small util for making karaoke videos in a comfortable way.<br><br>
+<a href="littlefox.html"><b>LittleFox</b></a> is a small tool designed to help user share audio or video on social websites or make slideshows with speech audio and picture in a simple and efficient way. It was developed to conveniently synthesis subtitle with video or audio without traditional boring works.</p>
 </div> <!-- col-md-4-->
 
 
