--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -30,7 +30,7 @@
         <h1>LittleFox</h1>
         <p class="greenbig">The small util for making karaoke videos in a comfortable way.</p>
         <p class="lead"><b>LittleFox</b> is a small tool designed to help people synthesis subtitle with music and video in an efficient way. It was designed to conveniently synthesis subtitle with audio and video without traditional boring works. It helps end user share music or video on social websites or make slideshows with speech audio and pictures in a simple and efficient way. With the help of it, you can burn your favourite mp3 to video with lyrics sheet in several minutes, make slideshows by merging pictures with speech audio, synchronise some words to an exists video, and easily share them with a very small file size.<br><br>
-        <span class="hilight">LittleFox is also a karaoke video making tool. </span>
+        <span class="hilight">LittleFox is an accurate karaoke video making tool. </span>
         </p>
     </div>
 
