--- a/en/sounler.html
+++ b/en/sounler.html
@@ -26,9 +26,9 @@
 <div class="container-fluid">
     <div class="jumbotron">
         <p><img src="../images/sounler/logo.png" style="width: 120px;" /></p>
-        <h1>Sounler<br><em>Version 1.5</em></h1>
+        <h1>Sounler<br><em>Version 1.5.2</em></h1>
         <p class="greenbig"><em>The small audio player for chiptune.</em></p>
-        <p class="lead">The designedly small util for audio file classification and organisation. A small chiptune player for all classic home computers. <b>Sounler</b> is a small audio player originally developed to play various of audio format from popular arcade games and video games in later 80s and early 90s, i.e. the golden legend era. Sounler especially developed for chiptune, a.k.a video game music, so it supports almost all kinds of audio file format exists in NES(Famicom), SNES, GBA, N64, PSX, PS2, PSP, SMD, XBOX, GAMECUBE, WII, NDS, 3DS and DOS etc. It's also a powerful util used to classify and organise audio file by Game, Movie, Category, Platform, Genre, Album, Artist, and other metadata of audio file. Sounler can not only playback almost all kinds of popular golden era audio formats such as SPC, NSF, PSF, VGM, XM, MSX etc, but also supports mordern common mostly used audio file formats on Unix, Linux, macOS and Windows, e.g, MP3, Ogg, AAC/M4A, WMA, FLAC, etc. Sounler help you organise large amount of audio resources by Game, Movie or Vendor in a very flexible way, and has completely control to define any type of metadata fields for <b>management of classification and audio file organisation</b>. Sounler also can be simply used to convert audio file format or reset metadata of audio files.</p>
+        <p class="lead">The designedly small util for audio file classification and organisation. A small chiptune player for all classic home computers. <b>Sounler</b> is a small audio player originally developed to play various of audio format from popular arcade games and video games in later 80s and early 90s, i.e. the golden legend era. Sounler especially developed for chiptune, a.k.a video game music, so it supports almost all kinds of audio file format exists in NES (Famicom), SNES, GBA, N64, PSX, PS2, PSP, SMD, XBOX, GAMECUBE, WII, NDS, 3DS and DOS etc. It's also a powerful util used to classify and organise audio file by Game, Movie, Category, Platform, Genre, Album, Artist, and other metadata of audio file. Sounler can not only playback almost all kinds of popular golden era audio formats such as SPC, NSF, PSF, VGM, XM, MSX etc, but also supports modern common mostly used audio file formats on Unix, Linux, macOS and Windows, e.g, MP3, Ogg, AAC/M4A, WMA, FLAC, etc. Sounler help you organise large amount of audio resources by Game, Movie or Vendor in a very flexible way, and has completely control to define any type of metadata fields for <b>management of classification and audio file organisation</b>. Sounler also can be simply used to convert audio file format or reset metadata of audio files.</p>
     </div>
 
 
@@ -37,16 +37,31 @@
 <p>If you can't open the link above, please launch App Store and found Sounler by searching.</p>
 
 
+<h2>Audio Converter</h2>
+<p>
+WMA  →  MP3<br>
+Ogg  →  MP3<br>
+AAC  →  MP3<br>
+FLAC →  MP3<br>
+<span class="hilight">Sounler can make MP3 with cover picture from WMA, Ogg, AAC, FLAC and MP3 etc.</span><br>
+<lt>Deal with Windows WMA:</lt> Sounler is also a WMA Converter, WMA to MP3 Converter and MP3 to WMA Encoder.<br>
+<lt>Deal with AAC audio files:</lt> Sounler is also an AAC Converter, AAC to WAV Decoder and WAV to AAC Encoder.<br>
+<lt>Deal with MP3 audio files:</lt> Sounler is also a MP3 Converter, MP3 to WAV Decoder and WAV to MP3 Encoder.<br>
+<lt>Deal with Linux audio:</lt> Sounler is also an Ogg Converter, Ogg to MP3 Converter and MP3 to Ogg Encoder.<br>
+<lt>Sounler can convert almost any audio file to MP3, Ogg, AAC and WAV audio file format.</lt><br>
+</p>
+
 <h2>Features</h2>
 <p><ul>
+<li>Establish audio resource database in an efficient way.</li>
 <li>Music player for video game platforms including Nintendo, Sony PlayStation, Amiga, Sega and Spectrum, etc.</li>
 <li>Organise thousands of audio files by music metadata, such as platform, style, self-defined category, tags etc.</li>
 <li>Powerful database query by combining of logical operations. Fast, intuitive and simple.</li>
 <li>Organise audio files by drag and drop operations in a Finder-like environment.</li>
 <li>Full featured music player with traditional playlist management.</li>
 <li>Metadata extract from all kinds of audio file and export, including cover picture extract and save.</li>
-<li>Convert almost any normal audio file format to local file including MP3, Ogg, AAC and WAV audio format.</li>
-<li>Convert audio file to MP3 includes self-defined cover picture, and normal metadata, such as artist, album, genre and comments.</li>
+<li>Convert almost any normal audio file format to MP3, Ogg, AAC and WAV audio format.</li>
+<li>Convert audio file to MP3 includes self-defined cover picture and metadata, such as artist, album, genre and comments.</li>
 <li>Export report with the queried results from database.</li>
 <li>Ultra lightweight.</li>
 </ul></p>
@@ -77,16 +92,6 @@
 <li>...</li>
 </ul>
 </p>
-
-<h2>Universal audio converter for all audio file format</h2>
-<p>
-<lt>Deal with AAC audio files on Mac:</lt> Sounler is also an AAC Converter, AAC to WAV Decoder and WAV to AAC Encoder.<br>
-<lt>Deal with MP3 audio files on Mac:</lt> Sounler is also a MP3 Converter, MP3 to WAV Decoder and WAV to MP3 Encoder.<br>
-<lt>Deal with Linux audio on Mac:</lt> Sounler is also an Ogg Converter, Ogg to MP3 Converter and MP3 to Ogg Encoder.<br>
-<lt>Deal with Windows audio on Mac:</lt> Sounler is also a WMA Converter, WMA to MP3 Converter and MP3 to WMA Encoder.<br>
-<lt>Sounler can convert almost any audio file to MP3, Ogg, AAC and WAV audio file format.</lt><br>
-</p>
-
 
 
 <h2>References:</h2>
