--- a/en/iosfinder.html
+++ b/en/iosfinder.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta property="og:title" content="iPowerReader, review code on iPad anywhere.">
+<meta property="og:title" content="iOSFinder, review code on iPad anywhere.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
@@ -10,11 +10,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,shrink-to-fit=no">
-<meta name="description" content="iPowerReader, review code on iPad anywhere.">
+<meta name="description" content="iOSFinder, review code on iPad anywhere.">
 <meta name="service" content="Product development and independent consulting services">
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Chinese text segmentation,Chinese Word segmentation,Chinese Text Tokenisation,Chinese Linguistics,Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Chinese word segmentation,Morphological Analyzer,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
-<title>iPowerReader, review code on iPad anywhere.</title>
+<title>iOSFinder, review code on iPad anywhere.</title>
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
 <script src="../js/jquery.min.js"></script>
@@ -25,10 +25,10 @@
 <div class="container-fluid">
 
     <div class="jumbotron">
-        <h1>iPowerReader</h1>
+        <h1>iOSFinder</h1>
         <p class="greenbig">The designedly Finder on iOS device.</p>
         <p class="lead">
-        <b>iPowerReader</b> is a Finder-like app on iOS device, it was renamed from <b>iCodeEditor</b>, it is an:<br></p>
+        <b>iOSFinder</b> is a Finder-like app on iOS device, it was renamed from <b>iCodeEditor</b>, it is an:<br></p>
 <ul><li><lt>Universal file manager (File Explorer, i.e Finder on Mac).</lt></li>
 <li><lt>Universal file viewer (Reader for any kinds of files on iOS device).</lt></li>
 <li><lt>Universal source code editor (Powerful code editor designedly developed for iPad).</lt></li>
@@ -63,9 +63,9 @@ So, this app developed to help you manage files in your iOS devices just like on
 <p>The above video is very old, but demonstrate the app's features.</p>
 
 <h2>Fast share files between your Mac, Windows PC or Linux, Android and iOS devices</h2>
-<p><lt>iPowerReader is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feel free.</lt></p>
+<p><lt>iOSFinder is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feel free.</lt></p>
 
-<p>You can download all kinds of files from your Mac or PC and read them on your iOS devices. You can also upload any kinds of files to your Mac or PC from your iPhone or iPad. Browse eBooks and PDF files, read Office documents e.g. EXCEL, WORD and PowerPoint, view pictures by slipping your finger, listening musics like in iTunes and watching movies. Of course, the app can be emphasised using as a resource explorer like Finder on Mac. iPowerReader designed to be a P2P file share solution, you can directly move files between your desktop, server, mobile phone and iOS devices remotely.</p>
+<p>You can download all kinds of files from your Mac or PC and read them on your iOS devices. You can also upload any kinds of files to your Mac or PC from your iPhone or iPad. Browse eBooks and PDF files, read Office documents e.g. EXCEL, WORD and PowerPoint, view pictures by slipping your finger, listening musics like in iTunes and watching movies. Of course, the app can be emphasised using as a resource explorer like Finder on Mac. iOSFinder designed to be a P2P file share solution, you can directly move files between your desktop, server, mobile phone and iOS devices remotely.</p>
 
 <h2>Features</h2>
 <ul>
@@ -75,8 +75,9 @@ So, this app developed to help you manage files in your iOS devices just like on
 <li> Automatically generate thumbnail for image and video, and different icon for different file types, e.g. pdf, office documents, audio, web files and any type of source code files.</li>
 </ul>
 
+
 <h2>Read &amp; Review code on iPad</h2>
-<p class="hilight">iPowerReader was renamed from <b>iCodeEditor</b>, means that it was originally developed to edit source code on iPad, in fact, yes, it actually a full featured code editor. This function was especially designed for anyone who wants to read or edit source code on iOS device.</p>
+<p class="hilight">iOSFinder was renamed from <b>iCodeEditor</b>(another name is iPowerReader), means that it was originally developed to edit source code on iPad, in fact, yes, it actually a full featured code editor. This function was especially designed for anyone who wants to read or edit source code on iOS device.</p>
 <ul>
 <li> Syntax highlighting. Source code parser integrated and symbols indexed, such as module, class, function definition, variable declaration etc.</li>
 <li> Symbol browse and filter. Search symbols in folder that holds large number of files.</li>
@@ -91,9 +92,9 @@ So, this app developed to help you manage files in your iOS devices just like on
 
 
 <h2>FTP Server Settings</h2>
-<p><strong>1. On Macintosh:</strong> System Preferences → Sharing → File Sharing, check the service and got the IP address of your machine, then you can input it in the settings of iPowerReader.<br><br><a href="../images/editor/ftp.png" target="_blank"><img src="../images/editor/ftp.png" alt="" class="screenshots"/></a><br><br>
+<p><strong>1. On Macintosh:</strong> System Preferences → Sharing → File Sharing, check the service and got the IP address of your machine, then you can input it in the settings of iOSFinder.<br><br><a href="../images/editor/ftp.png" target="_blank"><img src="../images/editor/ftp.png" alt="" class="screenshots"/></a><br><br>
 <a href="uftp.html"><img src="../images/uftp/logo.png" alt="" style="width:32px;height:auto;vertical-align: -1ex;"/></a>Because macOS High Sierra removed the builtin FTP Server, there's an alternative solution: 
-<a href="http://www.sevenuc.com/en/uftp.html">Personal FTP Server</a>, use the uFTP Server, your FTP settings of iPowerReader should be changed to: <b>192.168.1.4:2121</b>, i.e. append a port number to the server IP address and sperate with <b>a colon ":"</b>, for the example, the port number is 2121, then the appending string is <span class="warning">":2121"</span>, five characters. 
+<a href="http://www.sevenuc.com/en/uftp.html">Personal FTP Server</a>, use the uFTP Server, your FTP settings of iOSFinder should be changed to: <b>192.168.1.4:2121</b>, i.e. append a port number to the server IP address and sperate with <b>a colon ":"</b>, for the example, the port number is 2121, then the appending string is <span class="warning">":2121"</span>, five characters. 
 </p>
 
 <p><strong>2. On Windows:</strong><br>
