--- a/en/ai.html
+++ b/en/ai.html
@@ -17,6 +17,9 @@
 <title>Bamboo, the tiny Chinese word segmentation engine.</title>
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
+<style type="text/css">
+table, p, pre, li { max-width: 714px; }
+</style>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 </head>
